<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Casa Comercio Notifier</string>
    <string name="endpoint_label">URL del Validador</string>
    <string name="endpoint_hint">http://76.13.162.145:3001</string>
    <string name="save">Guardar</string>
    <string name="open_listener_settings">Activar permiso de notificaciones</string>
    <string name="test_connection">Probar conexión</string>
    <string name="status_label">Estado</string>
    <string name="status_active">Activo</string>
    <string name="status_inactive">Sin permiso de notificaciones</string>
    <string name="last_sent">Últimos envíos</string>
    <string name="clear_log">Limpiar</string>
    <string name="log_empty">Sin envíos aún. Esperando la primera transferencia.</string>
    <string name="ignore_battery">Quitar de optimización de batería</string>
    <string name="fg_notif_title">Casa Comercio Notifier activo</string>
    <string name="fg_notif_text">Escuchando notificaciones de Brubank</string>
</resources>
